--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,8 +1,7 @@
 <%= form_with(model:[:user, student], local: true) do |form| %>
   <% if student.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(student.errors.count, "error") %> prohibited this student from being saved:</h2>
-
+      <p class="error"><%= student.errors.count %>件のエラーがあります。</p>
       <ul>
         <% student.errors.full_messages.each do |message| %>
           <li><%= message %></li>
