生徒情報の生年月日のfield名変更

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -33,7 +33,7 @@
 
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :birthday, "生年月日", class: "label" %></label>
-      <div class="birth_date_field">
+      <div class="birthday_field">
       <%= raw sprintf(
                 form.date_select(
                   :birthday,
