--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
     </div>
 
     <div class="mb-4">
-      <%= f.submit t('.sign_up'), class: "btn btn-outline-success" %>
+      <%= f.submit t('.sign_up'), class: "btn btn-outline-success user_new " %>
     </div>
   <% end %>
 
