--- a/app/views/emergency_contacts/show.html.erb
+++ b/app/views/emergency_contacts/show.html.erb
@@ -1,3 +1,4 @@
+<h3>緊急連絡先</h3>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label">氏名</label>
   <input type="text" class="form-control" id="formGroupExampleInput2" placeholder=<%= @emergency_contact.name %>>
