--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,4 @@
-<h1>新規登録</h1>
+<h3>基本情報 新規登録</h3>
 
 <%= render 'form', student: @student %>
 <%= link_to 'マイページ', user_path(current_user) ,class: "btn btn-outline-success"%>
