--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model:[:user, student], local: true) do |form| %>
+<%= form_with(model:[user, student], url:selection_new_or_edit, local: true) do |form| %>
   <% if student.errors.any? %>
     <div id="error_explanation">
       <p class="error"><%= student.errors.count %>件のエラーがあります。</p>
