--- a/app/views/family_environments/_form.html.erb
+++ b/app/views/family_environments/_form.html.erb
@@ -14,11 +14,11 @@
   <section class="section">
     <div class="container">
       <div class="columns is-centered">
-         <label for="formGroupExampleInput2" class="form-label"><%= form.label :student_furigana, "続柄", class: "label" %></label>
-         <input type="text_field" placeholder="例 弟" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :relationship %>
+         <label for="formGroup1" class="form-label"><%= form.label :student_furigana, "続柄", class: "label" %></label>
+         <input type="text_field" placeholder="例 弟" class="form-control" id="formGroup1" placeholder=<%= form.text_field :relationship %>
       <div class="column is-6">
          <label for="formGroupExampleInput2" class="form-label"><%= form.label :name, "氏名", class: "label" %></label>
-         <input type="text_field" placeholder="例 山田 太郎" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :name %>
+         <input type="text_field" placeholder="例 山田 太郎" class="form-control" id="formGroup2" placeholder=<%= form.text_field :name %>
 
        <div class="column is-6">
          <label for="formGroupExampleInput2" class="form-label"><%= form.label :birthday, "生年月日", class: "label" %></label>
@@ -39,7 +39,7 @@
 
       <div class="column is-6">
          <label for="formGroupExampleInput2" class="form-label"><%= form.label :family, "兄弟姉妹の校園名・学年・組/保護者・同居人の職業", class: "label" %></label>
-         <input type="text_field" placeholder="例 京都東小学校5年3組" class="form-control" id="formGroupExampleInput2" placeholder=<%= form.text_field :family %>
+         <input type="text_field" placeholder="例 京都東小学校5年3組" class="form-control" id="formGroup3" placeholder=<%= form.text_field :family %>
 
   <div class="actions">
     <%= form.submit class: "button" ,class: "btn btn-outline-success"%>
