--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -8,12 +8,19 @@ body {
   display: flex;
   flex-flow: column;
   min-height: 100vh;
+  margin-right: 0px;
+  margin-left: 0px;
 }
 
 .wrapper{
   flex: 1;
 }
-.footer{
+
+html {
+  position: relative;
+}
+
+footer{
   position: absolute;
   bottom: 0;
   left: 0;
