入力フォームの幅調整

--- a/app/views/emergency_contacts/_form.html.erb
+++ b/app/views/emergency_contacts/_form.html.erb
@@ -13,16 +13,16 @@
     <div class="container">
       <div class="columns is-centered">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :name, "氏名", class: "label" %></label>
-        <input type="text" placeholder="例 山田 花子" class="form-control" id="formGroup1" placeholder=<%= form.text_field :name %>
-      <div class="column is-6">
+        <input type="text" placeholder="例 山田 花子" class="form-control w20" id="formGroup1" placeholder=<%= form.text_field :name %>
+      <div class="column is-3">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :relationship, "続柄", class: "label" %></label>
-        <input type="text_field" placeholder="例 祖母" class="form-control" id="formGroup2" placeholder=<%= form.text_field :relationship %>
+        <input type="text_field" placeholder="例 祖母" class="form-control w20" id="formGroup2" placeholder=<%= form.text_field :relationship %>
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :contact_address, "連絡先", class: "label" %></label>
-        <input type="text_field" placeholder="例 祖母宅、勤務先など" class="form-control" id="formGroup3" placeholder=<%= form.text_field :contact_address %>
+        <input type="text_field" placeholder="例 祖母宅、勤務先など" class="form-control w20" id="formGroup3" placeholder=<%= form.text_field :contact_address %>
       <div class="column is-6">
         <label for="formGroupExampleInput2" class="form-label"><%= form.label :telephone, "電話番号", class: "label" %></label>
-        <input type="text_field" placeholder="例 090-0000-0000" class="form-control" id="formGroup4" placeholder=<%= form.text_field :telephone %>
+        <input type="text_field" placeholder="例 090-0000-0000" class="form-control w20" id="formGroup4" placeholder=<%= form.text_field :telephone %>
 
 
   <div class="actions">
