--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,12 +4,12 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="mb-4">
+    <div class="mb-4 w30">
       <%= f.label :email %><br>
       <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "メールアドレスを入力してください（必須）", class: 'form-control font-size-ch' %>
     </div>
 
-    <div class="mb-4">
+    <div class="mb-4 w30">
       <%= f.label :password %>
       <% if @minimum_password_length %>
       <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
@@ -17,12 +17,12 @@
       <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワードを入力してください（必須）", class: 'form-control font-size-ch' %>
     </div>
 
-    <div class="mb-4">
+    <div class="mb-4 w30">
       <%= f.label :password_confirmation %><br>
       <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード確認用（必須）", class: 'form-control font-size-ch' %>
     </div>
 
-    <div class="mb-4">
+    <div class="mb-4 w30">
       <%= f.submit t('.sign_up'), class: "btn btn-outline-success user_new " %>
     </div>
   <% end %>
