--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -14,10 +14,10 @@
     <div class="container">
       <div class="columns is-centered">
         <label for="formGroup1" class="form-label"><%= form.label :student_furigana, "生徒名（ふりがな）", class: "label" %></label>
-        <input type="text_field" placeholder="やまだ はなこ" class="form-control" id="formGroup1" placeholder=<%= form.text_field :student_furigana %>
+        <input type="text_field" placeholder="やまだ はなこ" class="form-control w20" id="formGroup1" placeholder=<%= form.text_field :student_furigana %>
       <div class="column is-6">
         <label for="formGroup2" class="form-label"><%= form.label :student_name, "生徒名（漢字）", class: "label" %></label>
-        <input type="text_field" placeholder="山田 花子" class="form-control" id="formGroup2" placeholder=<%= form.text_field :student_name %>
+        <input type="text_field" placeholder="山田 花子" class="form-control w20" id="formGroup2" placeholder=<%= form.text_field :student_name %>
 
       <!-- <div class="form-check form-check-inline">
         <label for="formGroupExampleInput2" class="form-label"> form.label :sex, "sex", class: "label" %></label>
@@ -29,7 +29,7 @@
 
       <div class="column is-6">
         <label for="formGroup3" class="form-label"><%= form.label :sex, "性別", class: "label" %></label>
-        <input type="text_field" placeholder="女"  class="form-control" id="formGroup3" placeholder=<%= form.text_field :sex %>
+        <input type="text_field" placeholder="女"  class="form-control w20" id="formGroup3" placeholder=<%= form.text_field :sex %>
 
       <div class="column is-6">
         <label for="formGroup4" class="form-label"><%= form.label :birthday, "生年月日", class: "label" %></label>
@@ -46,31 +46,31 @@
 
       <div class="column is-6">
         <label for="formGroup5" class="form-label"><%= form.label :telephone, "（自宅）電話番号", class: "label" %></label>
-        <input type="text_field" placeholder="075-000-0000" class="form-control" id="formGroup5" placeholder=<%= form.text_field :telephone %>
+        <input type="text_field" placeholder="075-000-0000" class="form-control w20" id="formGroup5" placeholder=<%= form.text_field :telephone %>
 
       <div class="column is-6">
         <label for="formGroup6" class="form-label"><%= form.label :cellphone, "（携帯）電話番号", class: "label" %></label>
-        <input type="text_field" placeholder="090-000-0000" class="form-control" id="formGroup6" placeholder=<%= form.text_field :cellphone %>
+        <input type="text_field" placeholder="090-000-0000" class="form-control w20" id="formGroup6" placeholder=<%= form.text_field :cellphone %>
 
       <div class="column is-6">
         <label for="formGroup7" class="form-label"><%= form.label :post_code, "郵便番号", class: "label" %></label>
-        <input type="text_field" placeholder="000-0000" class="form-control" id="formGroup7" placeholder=<%= form.text_field :post_code %>
+        <input type="text_field" placeholder="000-0000" class="form-control w20" id="formGroup7" placeholder=<%= form.text_field :post_code %>
 
       <div class="column is-6">
         <label for="formGroup8" class="form-label"><%= form.label :address, "住所", class: "label" %></label>
-        <input type="text_field" placeholder="京都府京都市中京区御所南1234" class="form-control" id="formGroup8" placeholder=<%= form.text_field :address %>
+        <input type="text_field" placeholder="京都府京都市中京区御所南1234" class="form-control w40" id="formGroup8" placeholder=<%= form.text_field :address %>
 
       <div class="column is-6">
         <label for="formGroup9" class="form-label"><%= form.label :parents_furigana, "保護者名（ふりがな）", class: "label" %></label>
-        <input type="text_field" placeholder="やまだ たかし" class="form-control" id="formGroup9" placeholder=<%= form.text_field :parents_furigana %>
+        <input type="text_field" placeholder="やまだ たかし" class="form-control w20" id="formGroup9" placeholder=<%= form.text_field :parents_furigana %>
 
       <div class="column is-6">
         <label for="formGroup10" class="form-label"><%= form.label :parents_name, "保護者名（漢字）", class: "label" %></label>
-        <input type="text_field" placeholder="山田 隆" class="form-control" id="formGroup10" placeholder=<%= form.text_field :parents_name %>
+        <input type="text_field" placeholder="山田 隆" class="form-control w20" id="formGroup10" placeholder=<%= form.text_field :parents_name %>
 
       <div class="column is-6">
         <label for="formGroup11" class="form-label"><%= form.label :relationship, "続柄", class: "label" %></label>
-        <input type="text_field" placeholder="父" class="form-control" id="formGroup11" placeholder=<%= form.text_field :relationship %>
+        <input type="text_field" placeholder="父" class="form-control w20" id="formGroup11" placeholder=<%= form.text_field :relationship %>
 
       <div class="actions">
         <%= form.submit class: "button" ,class: "btn btn-outline-success" %>
