--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<p><strong><font color="red">【　提出期限：６月３０日（木）　】</font></strong>期日内提出のご協力の程お願い申し上げます。</p>
+<p><strong><font color="red">【  提出期限：６月３０日(木)  】</font></strong>期日内提出のご協力の程お願い申し上げます。</p>
 <% if current_user.try(:admin?) %>
   <%= link_to '管理画面', rails_admin_path ,class: "btn btn-outline-success"%>
 <% end %>
