--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -1,4 +1,3 @@
-
 <table class="table table-striped">
   <tbody>
   <% comments.each do |comment| %>
@@ -7,6 +6,7 @@
         <td>学校</td>
       <% else%>
         <td><%= comment.user.students.first.parents_name %></td>
+        <td><%= comment.created_at.strftime('%Y/%m/%d') %></td>
       <% end %>
     <tr>
       <% if comment.id.present? %>
