--- a/app/views/family_environments/index.html.erb
+++ b/app/views/family_environments/index.html.erb
@@ -3,11 +3,11 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>relationship</th>
-      <th>name</th>
-      <th>birthday</th>
-      <th>age</th>
-      <th>family</th>
+      <th>続柄</th>
+      <th>氏名</th>
+      <th>生年月日</th>
+      <th>年齢</th>
+      <th>兄弟姉妹の校園名・学年・組/保護者・同居人の職業</th>
       <th colspan="3"></th>
     </tr>
   </thead>
