--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -13,10 +13,10 @@
   <section class="section">
     <div class="container">
       <div class="columns is-centered">
-        <label for="formGroup1" class="form-label"><%= form.label :student_furigana, "student_furigana", class: "label" %></label>
+        <label for="formGroup1" class="form-label"><%= form.label :student_furigana, t("activerecord.attributes.student.student_furigana"), class: "label" %></label>
         <input type="text_field" placeholder="やまだ はなこ" class="form-control w20" id="formGroup1" placeholder=<%= form.text_field :student_furigana %>
       <div class="column is-6">
-        <label for="formGroup2" class="form-label"><%= form.label :student_name, "student_name", class: "label" %></label>
+        <label for="formGroup2" class="form-label"><%= form.label :student_name, t("activerecord.attributes.student.student_name"), class: "label" %></label>
         <input type="text_field" placeholder="山田 花子" class="form-control w20" id="formGroup2" placeholder=<%= form.text_field :student_name %>
 
       <!-- <div class="form-check form-check-inline">
@@ -28,11 +28,11 @@
       </div> -->
 
       <div class="column is-6">
-        <label for="formGroup3" class="form-label"><%= form.label :sex, "sex", class: "label" %></label>
+        <label for="formGroup3" class="form-label"><%= form.label :sex, t("activerecord.attributes.student.sex"), class: "label" %></label>
         <input type="text_field" placeholder="女"  class="form-control w20" id="formGroup3" placeholder=<%= form.text_field :sex %>
 
       <div class="column is-6">
-        <label for="formGroup4" class="form-label"><%= form.label :birthday, "birthday", class: "label" %></label>
+        <label for="formGroup4" class="form-label"><%= form.label :birthday, t("activerecord.attributes.student.birthday"), class: "label" %></label>
       <div class="birthday_field">
       <%= raw sprintf(
                 form.date_select(
@@ -45,31 +45,31 @@
                 '年 ', '月 ') + '日' %>
 
       <div class="column is-6">
-        <label for="formGroup5" class="form-label"><%= form.label :telephone, "telephone", class: "label" %></label>
+        <label for="formGroup5" class="form-label"><%= form.label :telephone, t("activerecord.attributes.student.telephone"), class: "label" %></label>
         <input type="text_field" placeholder="075-000-0000" class="form-control w20" id="formGroup5" placeholder=<%= form.text_field :telephone %>
 
       <div class="column is-6">
-        <label for="formGroup6" class="form-label"><%= form.label :cellphone, "cellphone", class: "label" %></label>
+        <label for="formGroup6" class="form-label"><%= form.label :cellphone, t("activerecord.attributes.student.cellphone"), class: "label" %></label>
         <input type="text_field" placeholder="090-000-0000" class="form-control w20" id="formGroup6" placeholder=<%= form.text_field :cellphone %>
 
       <div class="column is-6">
-        <label for="formGroup7" class="form-label"><%= form.label :post_code, "post_code", class: "label" %></label>
+        <label for="formGroup7" class="form-label"><%= form.label :post_code, t("activerecord.attributes.student.post_code"), class: "label" %></label>
         <input type="text_field" placeholder="000-0000" class="form-control w20" id="formGroup7" placeholder=<%= form.text_field :post_code %>
 
       <div class="column is-6">
-        <label for="formGroup8" class="form-label"><%= form.label :address, "address", class: "label" %></label>
+        <label for="formGroup8" class="form-label"><%= form.label :address, t("activerecord.attributes.student.address"), class: "label" %></label>
         <input type="text_field" placeholder="京都府京都市中京区御所南1234" class="form-control w40" id="formGroup8" placeholder=<%= form.text_field :address %>
 
       <div class="column is-6">
-        <label for="formGroup9" class="form-label"><%= form.label :parents_furigana, "parents_furigana", class: "label" %></label>
+        <label for="formGroup9" class="form-label"><%= form.label :parents_furigana, t("activerecord.attributes.student.parents_furigana"), class: "label" %></label>
         <input type="text_field" placeholder="やまだ たかし" class="form-control w20" id="formGroup9" placeholder=<%= form.text_field :parents_furigana %>
 
       <div class="column is-6">
-        <label for="formGroup10" class="form-label"><%= form.label :parents_name, "parents_name", class: "label" %></label>
+        <label for="formGroup10" class="form-label"><%= form.label :parents_name, t("activerecord.attributes.student.parents_name"), class: "label" %></label>
         <input type="text_field" placeholder="山田 隆" class="form-control w20" id="formGroup10" placeholder=<%= form.text_field :parents_name %>
 
       <div class="column is-6">
-        <label for="formGroup11" class="form-label"><%= form.label :relationship, "relationship", class: "label" %></label>
+        <label for="formGroup11" class="form-label"><%= form.label :relationship, t("activerecord.attributes.student.relationship"), class: "label" %></label>
         <input type="text_field" placeholder="父" class="form-control w20" id="formGroup11" placeholder=<%= form.text_field :relationship %>
 
       <div class="actions">
