show画面の国際化

--- a/app/views/emergency_contacts/show.html.erb
+++ b/app/views/emergency_contacts/show.html.erb
@@ -1,18 +1,18 @@
 <h3>緊急連絡先</h3>
 <div class="mb-3">
-  <label for="formGroupExampleInput2" class="form-label">氏名</label>
+  <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.emergency_contact.name")%></label>
   <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @emergency_contact.name %>>
 </div>
 <div class="mb-3">
-  <label for="formGroupExampleInput2" class="form-label">続柄</label>
+  <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.emergency_contact.relationship")%></label>
   <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @emergency_contact.relationship %>>
 </div>
 <div class="mb-3">
-  <label for="formGroupExampleInput2" class="form-label">連絡先</label>
+  <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.emergency_contact.contact_address")%></label>
   <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @emergency_contact.contact_address %>>
 </div>
 <div class="mb-3">
-  <label for="formGroupExampleInput2" class="form-label">電話番号</label>
+  <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.emergency_contact.telephone")%></label>
   <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @emergency_contact.telephone %>>
 </div>
 
