--- a/app/views/family_environments/show.html.erb
+++ b/app/views/family_environments/show.html.erb
@@ -1,23 +1,23 @@
 <h3>家庭環境調査</h3>
 
 <div class="mb-3">
-  <label for="formGroupExampleInput" class="form-label">続柄</label>
+  <label for="formGroupExampleInput" class="form-label"><%=t("activerecord.attributes.family_environment.relationship")%></label>
   <input type="text" class="form-control w20" id="formGroupExampleInput" placeholder=<%=@family_environment.relationship %>>
 </div>
 <div class="mb-3">
-  <label for="formGroupExampleInput" class="form-label">氏名</label>
+  <label for="formGroupExampleInput" class="form-label"><%=t("activerecord.attributes.family_environment.name")%></label>
   <input type="text" class="form-control w20" id="formGroupExampleInput" placeholder=<%=@family_environment.name %>>
 </div>
 <div class="mb-3">
-  <label for="formGroupExampleInput" class="form-label">生年月日</label>
+  <label for="formGroupExampleInput" class="form-label"><%=t("activerecord.attributes.family_environment.birthday")%></label>
   <input type="text" class="form-control w20" id="formGroupExampleInput" placeholder=<%=@family_environment.birthday %>>
 </div>
 <div class="mb-3">
-  <label for="formGroupExampleInput" class="form-label">年齢</label>
+  <label for="formGroupExampleInput" class="form-label"><%=t("activerecord.attributes.family_environment.age")%></label>
   <input type="text" class="form-control w20" id="formGroupExampleInput" placeholder=<%=@family_environment.age %>>
 </div>
 <div class="mb-3">
-  <label for="formGroupExampleInput" class="form-label">兄弟姉妹の校園名・学年・組/保護者・同居人の職業</label>
+  <label for="formGroupExampleInput" class="form-label"><%=t("activerecord.attributes.family_environment.family")%></label>
   <input type="text" class="form-control w20" id="formGroupExampleInput" placeholder=<%=@family_environment.family %>>
 </div>
 
