--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,48 +2,48 @@
 
 <div class=container>
 <div class="mb-3">
-  <label for="formGroupExampleInput" class="form-label"><%=t("activerecord.attributes.student.student_furigana")%></label>
-  <input type="text" class="form-control w20" id="formGroupExampleInput" placeholder=<%= @student.student_furigana %>>
+  <label for="formGroup" class="form-label"><%=t("activerecord.attributes.student.student_furigana")%></label>
+  <input type="text"readonly class="form-control w20" id="formGroupExampleInput" placeholder=<%= @student.student_furigana %>>
 </div>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.student.student_name")%></label>
-  <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.student_name %>>
+  <input type="text"readonly class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.student_name %>>
 </div>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.student.sex")%></label>
-  <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.sex %>>
+  <input type="text"readonly class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.sex %>>
 </div>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.student.birthday")%></label>
-  <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.birthday %>>
+  <input type="text"readonly class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.birthday %>>
 </div>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.student.telephone")%></label>
-  <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.telephone %>>
+  <input type="text"readonly class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.telephone %>>
 </div>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.student.cellphone")%></label>
-  <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.cellphone %>>
+  <input type="text"readonly class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.cellphone %>>
 </div>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.student.post_code")%></label>
-  <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.post_code %>>
+  <input type="text"readonly class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.post_code %>>
 </div>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.student.address")%></label>
-  <input type="text" class="form-control w40" id="formGroupExampleInput2" placeholder=<%= @student.address %>>
+  <input type="text"readonly class="form-control w40" id="formGroupExampleInput2" placeholder=<%= @student.address %>>
 </div>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.student.parents_furigana")%></label>
-  <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.parents_furigana %>>
+  <input type="text"readonly class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.parents_furigana %>>
 </div>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.student.parents_name")%></label>
-  <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.parents_name %>>
+  <input type="text"readonly class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.parents_name %>>
 </div>
 <div class="mb-3">
   <label for="formGroupExampleInput2" class="form-label"><%=t("activerecord.attributes.student.relationship")%></label>
-  <input type="text" class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.relationship %>>
+  <input type="text"readonly class="form-control w20" id="formGroupExampleInput2" placeholder=<%= @student.relationship %>>
 
 </div>
 <%= link_to '編集', edit_user_student_path(@student, user_id: @user.id)  ,class: "btn btn-outline-success", id:"edit" %>
